# MuMain2

./: .gitignore  ANDROID_PORT.md  CLAUDE.md  README.md  android-port-compat-ui-dataCurrent
Main/android/: gradle.properties  run_adb_debug.sh  settings.gradle
Main/android/app/: build.gradle
Main/android/app/src/main/: AndroidManifest.xml
Main/android/app/src/main/assets/shaders/: fixed_frag.glsl  fixed_vert.glsl
Main/android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
Main/android/app/src/main/java/com/mucrossengine/client/: MainActivity.java
Main/source/: BaseCls.h  CAIController.cpp  CBInterface.h  CBTMessageBox.h  CGMCharacter.cpp  CGMEffectHandle.cpp  CGMProtect.cpp  CGMRenderGroupMesh.cpp  CGMScriptLua.h  CSResourceManager.cpp  CShaderGL.h  DSplaysound.cpp  Defined_Global.h  GCCertification.cpp  GMCryingWolf2nd.cpp  GM_Kanturu_3rd.cpp  GM_PK_Field.cpp  GOBoid.cpp  GlobalBitmap.cpp  GlobalBitmap.h  GlobalText.h  LauncherHelper.cpp  MixMgr.h  MsgWin.cpp  NewUIBase.h  NewUIButton.cpp  NewUICommonMessageBox.cpp  NewUICustomMessageBox.cpp  NewUIMacroMain.cpp  NewUIMacroMain.h  NewUIMessageBox.cpp  NewUIMessageBox.h  NewUIMyInventory.cpp  NewUINPCDialogue.cpp  NewUIStorageInventory.cpp  NewUISystem.h  OptionWin.cpp  PList.h  PersonalShopTitleImp.cpp  PersonalShopTitleImp.h  (+30 more)
Main/source/ExternalObject/Leaf/: regkey.h  xortrans.h
Main/source/GameShop/: InGameShopSystem.cpp  InGameShopSystem.h  MsgBoxIGSBuyConfirm.cpp  MsgBoxIGSBuyPackageItem.cpp  MsgBoxIGSBuySelectItem.cpp  MsgBoxIGSCommon.cpp  MsgBoxIGSDeleteItemConfirm.cpp  MsgBoxIGSGiftStorageItemInfo.cpp  MsgBoxIGSSendGift.cpp  MsgBoxIGSSendGiftConfirm.cpp  MsgBoxIGSStorageItemInfo.cpp  MsgBoxIGSUseBuffConfirm.cpp  MsgBoxIGSUseItemConfirm.cpp
Main/source/GameShop/FileDownloader/: FTPConnecter.cpp  FTPConnecter.h  FileDownloader.cpp  HTTPConnecter.cpp  HTTPConnecter.h  Include.h
Main/source/GameShop/ShopListManager/: BannerInfo.cpp  Include.h  ListManager.cpp
Main/source/GameShop/ShopListManager/interface/: DownloadInfo.h  FTPConnecter.h  FileDownloader.h  IConnecter.h  Include.h
Main/source/GameShop/ShopListManager/interface/PathMethod/: Path.cpp
Main/source/GameShop/ShopListManager/interface/WZResult/: WZResult.cpp  WZResult.h
Main/source/Platform/: AndroidEglWindow.cpp  AndroidEglWindow.h  AndroidNetworkPollCompat.cpp  AndroidNetworkPollCompat.h  AndroidTextRenderer.cpp  AndroidTextRenderer.h  AndroidWin32Compat.h  AudioAndroidStub.cpp  AudioOpenSLES.cpp  AudioOpenSLES.h  CCRC32Adapter.cpp  CGMFontLayerStub.cpp  GLFixedFunctionStubs.h  GameAssetPath.cpp  GameAssetPath.h  GameConfigBootstrap.cpp  GameConfigBootstrap.h  GameConnectServerBootstrap.cpp  GameConnectServerBootstrap.h  GameDownloader.cpp  GameDownloader.h  GameMouseInput.cpp  GameMouseInput.h  GamePacketCryptoBootstrap.cpp  GamePacketCryptoBootstrap.h  ImGuiBackendStub.cpp  LauncherHelperAndroid.cpp  LegacyAndroidClientStubs.cpp  LegacyBootstrapStubs.cpp  LegacyClientRuntime.cpp  LegacyClientRuntime.h  LegacyGlobalsAndroid.cpp  MuCryptoStub.cpp  OpenGLESRenderBackend.cpp  OpenGLESRenderBackend.h  RenderBackend.cpp  RenderBackend.h  RenderStateCompat.h  SimpleModulusStub.cpp  TurboJpegStub.cpp  (+2 more)
Main/source/Time/: Timer.cpp  Timer.h
Main/source/Utilities/Log/: DebugAngel.cpp  ErrorReport.cpp  WindowsConsole.cpp  WindowsConsole.h
Util/: CCRC32.Cpp
docs/: android-port-compat-ui-2026-04-12.md  android-port-compat-ui-2026-04-13.md  gitignore-artefatos-locais-2026-04-13.md
docs/assets-server/: README.md
docs/assets-server/Data/: assets-manifest.txt
tools/: generate_assets_manifest.cpp  generate_assets_manifest.sh
tools/.build/: generate_assets_manifest
